feat(core): 迁移到 .NET 6 并实现插件基础架构
- 将目标框架从 netstandard2.1 升级到 net6.0
- 添加了对 BepInEx Unity IL2CPP 的支持
- 实现了插件入口点 Plugin.cs
- 添加了 AssetController 组件注册机制
- 集成了 Harmony 补丁系统
- 配置了 IL2CPP 互操作性支持
- 设置了项目构建属性和依赖项引用

--- a/AssetRedux/AssetRedux.csproj
+++ b/AssetRedux/AssetRedux.csproj
@@ -1,8 +1,24 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
     <PropertyGroup>
-        <TargetFramework>netstandard2.1</TargetFramework>
+        <TargetFramework>net6.0</TargetFramework>
         <Nullable>enable</Nullable>
+        <LangVersion>latest</LangVersion>
+        <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+        <ImplicitUsings>enable</ImplicitUsings>
+        <RestoreAdditionalProjectSources>
+            https://api.nuget.org/v3/index.json;
+            https://nuget.bepinex.dev/v3/index.json;
+            https://nuget.samboy.dev/v3/index.json
+        </RestoreAdditionalProjectSources>
     </PropertyGroup>
-
+    <PropertyGroup>
+        <CorePath>/home/mlfc/.local/share/Steam/steamapps/common/Territory/BepInEx/core</CorePath>
+        <InteropPath>/home/mlfc/.local/share/Steam/steamapps/common/Territory/BepInEx/interop</InteropPath>
+    </PropertyGroup>
+    <ItemGroup>
+        <PackageReference Include="BepInEx.Unity.IL2CPP" Version="6.0.0-be.*" IncludeAssets="compile"/>
+    </ItemGroup>
+    <ItemGroup>
+        <Reference Include="$(InteropPath)/*.dll" Private="false"/>
+    </ItemGroup>
 </Project>
