chore(build): 添加项目后构建事件以复制DLL到发布目录
- 配置PostBuild目标在构建后执行
- 设置ModOutDir属性指向发布目录
- 创建发布目录如果不存在
- 复制编译后的DLL文件到发布目录
- 启用跳过未更改文件的优化
- 添加构建成功消息提示

--- a/AssetRedux/AssetRedux.csproj
+++ b/AssetRedux/AssetRedux.csproj
@@ -21,4 +21,15 @@
     <ItemGroup>
         <Reference Include="$(InteropPath)/*.dll" Private="false"/>
     </ItemGroup>
+
+    <Target Name="PostBuild" AfterTargets="PostBuildEvent">
+        <PropertyGroup>
+            <ModOutDir>$(ProjectDir)../dist/Assemblies/</ModOutDir>
+        </PropertyGroup>
+        <MakeDir Directories="$(ModOutDir)" />
+        <Copy SourceFiles="$(TargetDir)$(TargetName).dll"
+              DestinationFiles="$(ModOutDir)$(TargetName).dll"
+              SkipUnchangedFiles="true" />
+        <Message Importance="high" Text="成功：DLL 已输出至发布目录 -> $(ModOutDir)" />
+    </Target>
 </Project>
